syntax = "proto3";

option go_package = "./;pb";

message Project {
    string name = 1;
    string description = 2;
    string hashAlgorithm = 3;
    int32 roundHash = 4;
}

message CreateProjectRequest {
    Project project = 1;
}

message CreateProjectReply {
    bool success = 1;
    string error = 2;
    string projectId = 3;
    string credential = 4;
    string key = 5;
}

service Projects {
    rpc CreateProject (CreateProjectRequest) returns (CreateProjectReply) {};
}
